--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ hs_err_pid*
 replay_pid*
 out/
 target/
+mvnw*
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -20,3 +21,6 @@ target/
 *.iws
 *.iml
 *.ipr
+/volumes/
+/ewm-stat-service/.mvn/
+/ewm-main-service/.mvn/
