--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,53 @@ services:
   stats-server:
     ports:
       - "9090:9090"
+    container_name: stats-service
+    build:
+      context: ./ewm-stat-service/service
+    depends_on:
+      stats-db:
+        condition: service_healthy
 
   stats-db:
     image: postgres:16.1
+    container_name: stats-db
+    ports:
+      - "5431:5432"
+    volumes:
+      - ./volumes/stats:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=stats
+      - POSTGRES_USER=stats
+      - POSTGRES_PASSWORD=12345
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
   ewm-service:
     ports:
       - "8080:8080"
+    container_name: ewm-service
+    build:
+      context: ./ewm-main-service
+    depends_on:
+      ewm-db:
+        condition: service_healthy
 
   ewm-db:
     image: postgres:16.1
+    container_name: ewm-db
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./volumes/ewm:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=ewm
+      - POSTGRES_USER=ewm
+      - POSTGRES_PASSWORD=12345
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
