--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,13 @@
 	</parent>
 
 	<name>Explore With Me</name>
-
+	<modules>
+		<module>ewm-stat-service</module>
+		<module>ewm-main-service</module>
+		<module>ewm-stat-service/client</module>
+		<module>ewm-stat-service/service</module>
+		<module>ewm-stat-service/dto</module>
+	</modules>
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
