--- a/ewm-main-service/pom.xml
+++ b/ewm-main-service/pom.xml
@@ -42,6 +42,11 @@
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>ru.practicum</groupId>
+      <artifactId>dto</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents.client5</groupId>
       <artifactId>httpclient5</artifactId>
     </dependency>
